Fix some small layout problems after updating bootstrap

--- a/app/assets/stylesheets/app/application/base.css.scss
+++ b/app/assets/stylesheets/app/application/base.css.scss
@@ -114,7 +114,7 @@ form {
   text-align: center;
   overflow: hidden;
   @include border-radius(4px);
-  padding: 1px;
+  padding: 0 4px;
   font-size: $font-small;
   background-color: rgb(185, 74, 72);
   color: white;
@@ -432,7 +432,10 @@ ul#navbar-left-links {
     border-right: 1px solid lighten($navbar-bg-color, 13);
 
     &.last { border: 0; }
+
     .label { margin-left: 3px; }
+
+    .icon { float: none; }
   }
 }
 
@@ -452,7 +455,7 @@ ul#navbar-right-links {
 
   .user-info-dropdown {
     margin: 0;
-    padding: 3px 10px;
+    padding: 4px 10px 2px 10px;
   }
 
   // small user info in the navbar
@@ -487,7 +490,10 @@ ul#navbar-right-links {
     &.open {
       background: darken($navbar-bg-color, 5);
     }
-    .caret { margin-top: 10px; }
+    .caret {
+      margin-top: 11px;
+      margin-right: 4px;
+    }
 
     .dropdown-menu {
       color: $font-color;
